[workspace]
members = [
  "crates/discovery",
  "crates/discovery-macros",
  "crates/entity-state",
  #"crates/mqtt",
]
resolver = "2"

[workspace.dependencies]
assert_matches = "1"
convert_case = "0.6"
darling = "0.14"
error-stack = "0.2"
itertools = { version = "0.10" }
nameof = "1"
paste = "1"
proc-macro2 = "1"
quote = "1"
semval = { version = "0.4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_test = "1"
syn = { version = "1", features = ["derive", "parsing"] }
