[workspace]
resolver = "2"
members = [
	"crates/mqtt-proto",
	"crates/mqtt-macros",
	"crates/mqtt-client",
	"crates/mqtt-provider",
	"crates/mqtt-provider-paho",
	"crates/dyn-error",
	"crates/metrics",

	# build crates
	"build/provide-any-probe",

	# examples
	"examples/mqtt-light",
	"examples/mqtt-light-manual-topics",
]

[workspace.metadata.featurex]
ignored = ["default?"]
required = ["bundled?"]
