[workspace]
resolver = "2"
members = [
	"crates/mqtt-proto",
	"crates/mqtt-macros",
	"crates/mqtt-client",
	"crates/mqtt-provider",
	"crates/mqtt-provider-paho",
	"crates/dyn-error",
	"crates/metrics",

	# build crates
	"build/provide-any-probe",

	# examples
	"examples/mqtt-light",
	"examples/mqtt-light-manual-topics",
]

[workspace.package]
edition = "2024"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/hass-rs"
license = "MIT"

[workspace.metadata.featurex]
ignored = ["default?"]
required = ["bundled?"]

[workspace.metadata.crane]
name = "hass-rs"

[workspace.dependencies]
assert_matches = "1"
async-trait = "0.1"
bytes = "1"
color-eyre = "0.6"
convert_case = "0.8"
darling = "0.21"
dirs = "6"
enumset = "1"
error-stack = "0.5"
flume = "0.11"
futures = { version = "0.3", default-features = false }
generational-arena = "0.2"
itertools = "0.14"
lasso = "0.7"
nameof = "1"
once_cell = "1"
opentelemetry-jaeger = "0.22"
paho-mqtt = { version = "0.13", default-features = false }
pin-project = "1"
proc-macro2 = "1"
quote = "1"
semval = { version = "0.5", default-features = false }
serde = { version = "1", default-features = false }
serde_json = "1"
serde_repr = "0.1"
serde_test = "1"
slug = "0.1"
static_assertions = "1"
syn = "2"
thiserror = "2"
tokio = { version = "1", default-features = false }
tracing = "0.1"
tracing-error = "0.2"
tracing-opentelemetry = "0.31"
tracing-subscriber = "0.3"
tracing-tree = "0.4"
opentelemetry = { version = "0.30", default-features = false }

hass-dyn-error = { version = "0.0.0", path = "crates/dyn-error", default-features = false }
hass-metrics = { version = "0.0.0", path = "crates/metrics", default-features = false }
hass-mqtt-client = { version = "0.0.0", path = "crates/mqtt-client", default-features = false }
hass-mqtt-macros = { version = "0.0.0", path = "crates/mqtt-macros", default-features = false }
hass-mqtt-proto = { version = "0.0.0", path = "crates/mqtt-proto", default-features = false }
hass-mqtt-provider = { version = "0.0.0", path = "crates/mqtt-provider", default-features = false }
hass-mqtt-provider-paho = { version = "0.0.0", path = "crates/mqtt-provider-paho", default-features = false }
hass-provide-any-probe = { version = "0.0.0", path = "build/provide-any-probe", default-features = false }
