[package]
name = "hass-mqtt-discovery-macros"
version = "0.0.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6"
darling = "0.14"
itertools = { version = "0.10" }
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["derive", "parsing"] }
