[package]
name = "hass-mqtt-discovery"
version = "0.1.0"
edition = "2021"
description = "home-assistant MQTT discovery types"
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/hass-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = { workspace = true }
nameof = { workspace = true }
semval = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }

hass-mqtt-discovery-macros = { version = "0.0.0", path = "../discovery-macros" }

[dev-dependencies]
assert_matches = { workspace = true }
serde_json = { workspace = true }
serde_test = { workspace = true }
