[package]
name = "hass-mqtt-discovery"
version = "0.1.0"
edition = "2021"
description = "home-assistant MQTT discovery types"
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/hass-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.2"
nameof = "1"
semval = { version = "0.5" }
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"

hass-mqtt-discovery-macros = { version = "0.0.0", path = "../discovery-macros" }

[dev-dependencies]
assert_matches = "1"
serde_json = "1"
serde_test = "1"
