[package]
name = "hass-entity-state"
version = "0.1.0"
edition = "2021"
description = "home-assistant MQTT entity state types"
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/hass-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
serde_json = { workspace = true }
serde_test = { workspace = true }
