[package]
name = "hass-metrics"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
opentelemetry = { version = "0.18", features = [
	"metrics",
], default-features = false }
lasso = { version = "0.6", features = ["ahasher", "multi-threaded"] }
