[package]
name = "hass-metrics"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { workspace = true }
opentelemetry = { workspace = true, features = ["metrics"] }
lasso = { workspace = true, features = ["ahasher", "multi-threaded"] }
