[package]
name = "hass-mqtt-client"
version = "0.1.0"
description = "home-assistant MQTT client"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
color-eyre = { workspace = true }
dirs = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
generational-arena = { workspace = true }
opentelemetry = { workspace = true }
pin-project = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
slug = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-opentelemetry = { workspace = true }

hass-dyn-error = { workspace = true }
hass-mqtt-provider = { workspace = true }
hass-mqtt-provider-paho = { workspace = true, optional = true }
hass-mqtt-proto = { workspace = true, features = ["std"] }

[build-dependencies]
hass-provide-any-probe = { workspace = true }

[features]
default = [
	"ssl",
	"paho",
	"backtrace",
	"spantrace",
	"hass-mqtt-provider-paho?/default",
]
paho = ["hass-mqtt-provider-paho/bundled"]
ssl = ["hass-mqtt-provider/ssl", "hass-mqtt-provider-paho?/ssl"]
ssl-bundled = ["ssl", "hass-mqtt-provider-paho?/vendored-ssl"]
backtrace = ["hass-mqtt-proto/backtrace"]
spantrace = ["hass-mqtt-proto/spantrace"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg"]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(doc_cfg)',
	'cfg(provide_any)',
] }
