[package]
name = "hass-mqtt-proto"
version = "0.0.0"
description = "home-assistant MQTT discovery types"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumset = { workspace = true, features = ["serde"] }
nameof = { workspace = true }
semval = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_repr = { workspace = true }
tracing-error = { workspace = true, optional = true }

hass-mqtt-macros = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
serde_json = { workspace = true }
serde_test = { workspace = true }

[build-dependencies]
hass-provide-any-probe = { workspace = true }

[features]
default = ["backtrace", "spantrace", "std", "serde"]
ser = []
de = ["alloc"]
serde = ["ser", "de"]
std = ["alloc", "serde/std", "serde"]
alloc = ["serde/alloc"]
backtrace = ["std"]
spantrace = ["dep:tracing-error", "std"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(doc_cfg)',
	'cfg(provide_any)',
] }
