[package]
name = "hass-mqtt-provider-paho"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
opentelemetry = { workspace = true }
paho-mqtt = { workspace = true }
pin-project = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "net"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }

hass-dyn-error = { workspace = true }
hass-metrics = { workspace = true }
hass-mqtt-provider = { workspace = true }

[features]
default = ["bundled", "ssl"]
bundled = ["paho-mqtt/bundled"]
ssl = ["paho-mqtt/ssl", "hass-mqtt-provider/ssl"]
vendored-ssl = ["ssl", "paho-mqtt/vendored-ssl"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(doc_cfg)',
	'cfg(provide_any)',
] }
