[package]
name = "hass-mqtt-provider"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
futures = { version = "0.3.25", default-features = false }

[features]
default = ["tls"]
tls = []
