[package]
name = "hass-mqtt-types"
version = "0.2.0"
edition = "2021"
description = "home-assistant MQTT discovery types"
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/hass-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumset = { version = "1", features = ["serde"] }
nameof = "1"
semval = { version = "0.5" }
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
thiserror = "1"
tracing-error = "0.2"

hass-mqtt-macros = { version = "0.0.0", path = "../mqtt-macros" }

[dev-dependencies]
assert_matches = "1"
serde_json = "1"
serde_test = "1"

[build-dependencies]
hass-provide-any-probe = { version = "0.0.0", path = "../../build/provide-any-probe" }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg"]
