[package]
name = "hass-mqtt"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
color-eyre = "0.6"
paho-mqtt = { version = "0.9.1", features = ["vendored-ssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slug = "0.1"
thiserror = "1"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1"
