[package]
name = "hass-mqtt"
version = "0.0.0"
edition = "2021"
description = "home-assistant MQTT client"
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/hass-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
color-eyre = "0.6"
flume = "0.10"
paho-mqtt = { version = "0.11", features = ["vendored-ssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slug = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
