[package]
name = "hass-mqtt-proto"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nameof = "1"
semval = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
serde_test = "1"
