[package]
name = "hass-mqtt-proto"
version = "0.1.0"
edition = "2021"
description = "home-assistant MQTT protocol types"
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/hass-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nameof = "1"
semval = "0.1"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"

[dev-dependencies]
serde_json = "1"
serde_test = "1"
