[package]
name = "mqtt-light-manual-topics"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.2"
futures = "0.3"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

hass-mqtt-client = { version = "0.0.0", path = "../../crates/mqtt-client" }
