[package]
name = "mqtt-light-manual-topics"
version = "0.0.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = { workspace = true }
futures = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }

hass-mqtt-client = { workspace = true, features = ["paho"] }
