[package]
name = "mqtt-light"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.2"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

hass-mqtt-discovery = { version = "0.2.0", path = "../../crates/discovery" }
hass-mqtt-client = { version = "0.0.0", path = "../../crates/mqtt-client" }
