[package]
name = "mqtt-light"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
futures = "0.3"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing-forest = { version = "0.1", features = ["full"] }

hass-mqtt-client = { version = "0.0.0", path = "../../crates/mqtt-client" }
